# ida

./: Makefile  Makefile.defs.in  README  README.md  configure  configure.in
apache/: Makefile  Makefile-noapxs  README  mod_idsa.c
common/: Makefile  misc.c  misc.h  scheme.c  scheme.h  socketlock.c  socketlock.h  sparse.c  sparse.h  ucred.h  udomain.c  udomain.h
doc/: AdvancedLogging.txt  ApplicationAccessControlandIntrusionDetection.txt  ApplicationIntrusionDetection.txt  BLURB  CREDITS  INSTALL  Makefile  ReferenceMonitor.txt  TODO  WARNING  api.txt  example-transform.xsl  fake-log-test  idsa-scheme-am.7  idsa-scheme-clf.7  idsa-scheme-err.7  idsa-scheme-fnl.7  idsa-scheme-ldm.7  idsa-scheme-rq.7  idsa-scheme-ssm.7  idsa.1  idsa_close.3  idsa_open.3  idsa_scan.3  idsa_set.3  idsa_types.3  idsad.8  idsad.conf.5  idsaexec.8  idsaguardgtk.8  idsaguardtty.8  idsaguile.8  idsaklogd.8  idsalog.1  idsapid.8  idsapipe.8  idsarlogd.8  idsasyslogd.8  idsatcpd.8  idsatcplogd.8  (+15 more)
doc/hacking/: diy  functions
doc/theory/: risks
etc/: Makefile  README  httpd.conf  idsad-interactive.conf.in  idsad-signatures.conf.in  idsad-simple.conf.in  idsad.conf.in  inetd.conf.in  pam-example  rc.idsa-full.in  rc.idsa-simple.in
example/: Makefile  README  run.sh  simple-example.c
example/idsa.d/: example
guard/: Makefile  README  idsaguardgtk.c  idsaguardtty.c
guile/: Makefile  README  example-false.scm  example-log.scm  example-trace.scm  guile.c
include/: Makefile  idsa.h  idsa_internal.h  idsa_schemes.h
lib/: Makefile  client.c  error.c  escape.c  event.c  mex.c  module.c  optimize.c  parse.c  print.c  protocol.c  risk.c  rule.c  support.c  syslog.c  types.c  unit.c  version.c  wire-binary.c  wire-text.c
modules/: Makefile  README  mod_chain.c  mod_constrain.c  mod_counter.c  mod_default.c  mod_diff.c  mod_example1.c  mod_example2.c  mod_exists.c  mod_interactive.c  mod_keep.c  mod_length.c  mod_log.c  mod_pipe.c  mod_regex.c  mod_sad.c  mod_send.c  mod_time.c  mod_timer.c  mod_true.c  mod_truncated.c  mod_type.c
pam/: Makefile  README  pam_idsa.c
server/: Makefile  functions.h  idsad.c  idsad.h  io.c  job.c  messages.c  set.c  structures.h
snoopy/: Makefile  README  snoopy.c
syslog/: Makefile  idsaklogd.c  idsarlogd.c  idsasyslogd.c
tcpd/: Makefile  idsatcpd.c
tcplogd/: Makefile  idsatcplogd.c
tools/: Makefile  install.sh  warn.sh
utils/: Makefile  idsaexec.c  idsalog.c  idsapid.c  idsapipe.c  idsascaffold.c  idsasocket.c  idsaxmlheader.sh
